# codex

./: README.md  pyproject.toml
dndrules/: __init__.py  abilities.py  character.py  dice.py  rules.py
tests/: test_abilities.py  test_character.py  test_dice.py  test_rules.py
tetris-game/: README.md  package-lock.json  package.json
tetris-game/src/: App.css  App.jsx  tetrominos.js  useInterval.js
