[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dndrules"
version = "0.1.0"
description = "Lightweight helpers for working with D&D 5e rules"
authors = [{name = "Codex User"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["dnd", "dungeons and dragons", "dice", "ttrpg"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Role-Playing",
]

[project.urls]
Homepage = "https://example.com/dndrules"

[tool.pytest.ini_options]
testpaths = ["tests"]
